network-policies/details.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: details-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: details
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: productpage
    ports:
    - protocol: TCP
      port: 9080
