network-policies/ratings.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ratings-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ratings
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: reviews
    ports:
    - protocol: TCP
      port: 9080
